Desktop, Alvoroca. Ok. Missin Tablet. Next; hover on piccies

--- a/styles/partials/_colours.scss
+++ b/styles/partials/_colours.scss
@@ -19,7 +19,9 @@ $f-solapino: white;
 
 $f-cards-text: white;
 
-$f-cards-links: lavender;
+$f-cards-links: rgb(155, 155, 218);
+
+$f-cards-main-links: rgb(227, 132, 37);
 
 
 
