--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -64,7 +64,9 @@
 
         .footer_logos {   
             width: 100%;        
-            padding-right: 50px;
+            padding-right: 60px;
+            gap: 20px;
+            
 
             .footer_logos_img {
                 height: 30px;
