--- a/styles/partials/_alvoroca.scss
+++ b/styles/partials/_alvoroca.scss
@@ -68,8 +68,11 @@ body {
     }
 
 
-    .alvoroca_banner{
-        height: auto;
+    .alvoroca_banner{        
+        grid-area: banner;
+        height: fit-content;
+        padding-top: 50px;
+        
         .banner_img{
             width: 100%;
             height: 120%;
@@ -134,7 +137,7 @@ body {
             width: 90%;
             height: auto;
             border: solid 1px;
-            border-radius: 0px 0px 5px 5px;
+            border-radius: 5px 5px 5px 5px;
             margin-bottom: 5px;
 
             .card_images {
@@ -188,16 +191,16 @@ body {
 
 
 
-/*
+
 @media screen and (min-width: 1200px) {
     .alvoroca_container {
         display: grid;
-            grid-template-areas:
-                        "header  header   header"
-                        "banner  banner   banner"
-                        "article article article"
-                        "main    main    main"
-                        "footer footer footer";
+        grid-template-areas:
+            "header  header   header"
+            "banner  banner   banner"
+            "article article article"
+            "main    main    main"
+            "footer footer footer";
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 240px auto auto auto 100px;
     
@@ -206,53 +209,82 @@ body {
             display: grid;
             grid-template-columns: 40% 60%;
             grid-template-rows: auto;
-            background-color: $bkgrn-alvoroca;
             
 
             .alvoroca_logo {
+                display: flex;                
+                align-items: center;
                 padding-left: 40px;
-                padding-top: 25px;
+                padding-top: 15px;
                 .alvo_logo{
-                    width: 210px;
-                    height: 200px;
+                    width: 230px;
+                    height: 210px;
                 }
                 
             }
 
             .alvoroca_navbar{
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: flex-start;
-                background-color: $bkgrn-alvoroca;
-                padding-top: 70px;
-
-                .alvoroca_nav_list li a{
-                    font-size: 1.7rem;
-                }
-
-
-                .alvoroca_link{
-                    font-size: 2.9rem;
-                
-                }
-
-            }
+                .alvoroca_nav_list{
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: space-evenly;               
+                    padding-top: 70px;
+                    li{
+                        margin-right: 48px;
+                        margin-top: 8px;
+                        text-decoration: none;
+                        a{
+                            font-size: 1.7rem;
+                        }
+                    }
     
+                    #alvoroca_link{
+                        color: $f-cards-links;
+                        font-size: 2rem;
+                    
+                    }
+                }
+            }
         }
         
 
         .alvoroca_banner{
             grid-area: banner;
-            background: $bkgrn-alvoroca;
+            padding-bottom: 300px;
             .banner_img{
                 min-width: 100%;                
             }        
         }
 
         .alvoroca_article{
+            padding-bottom: 150px;
             grid-area: article;
             display: grid;
             grid-template-columns: 1fr 1fr;
+            gap: 170px;
+            .card_image {
+                place-self: center;
+                .card_images{                             
+                    width: 430px;
+                    height: 460px;                                       
+                    border: solid 1px;                    
+                }
+            }
+            .card_text{
+                display: flex;
+                flex-direction: column;                
+                align-items: flex-start;
+                .card_title{                
+                    font-size: 2.7em;
+                    text-shadow: 0.3px 0.4px;           
+                    letter-spacing: 5px;         
+                }   
+                
+                .addlink{
+                    font-size: 2.2rem;
+                    color: $f-cards-links;
+                }
+            }
             
         }
 
@@ -260,128 +292,172 @@ body {
             grid-area: main;
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            padding-bottom: 90px;
+            padding-top: 100px;
+            padding-bottom: 90px;            
+            justify-items: center;
+            
+            .card {
+                width: 60%;
+                height: auto;
+                border: solid 1px;                
+                margin-bottom: 25px;
+                border-radius: 7px 7px 7px 7px;
+    
+                .card_images {
+                    border-radius: 7px 7px 0px 0px;
+                    height: 280px;
+                    width: 100%;
+                    // ATTENTION !!!!!!
+                } 
+                .card_description {
+                    margin-top: 18px;
+                    margin-left: 6px;                
+                    color: $f-cards-text;
+    
+                    .card_title {
+                        text-align: center;
+                        margin-bottom: 10px;
+                        color: $f-cards-text;
+                        font-size: 1.6rem;                        
+                    }
+                    a{
+                        margin-top: 10px    ;
+                        text-decoration: none;
+                        color: $f-cards-links;
+                        display: flex;
+                        justify-content: flex-end;
+                        margin-right: 14px;                
+                    }
+                    #addlink, p{
+                        font-size: 1.3rem;
+                    }
+                    #addlink{                        
+                        color: $f-cards-main-links;
+                        margin-top: 16px;
+                    }
+                    
+                }
+            }
             
         }
 
         .footer, .footer_alvo{
             grid-area: footer;
-            background-color: yellow;
-
         }
 
     }
 }
-//         .alvoroca_header{
-//             grid-area: header;
-//             display: flex;            
-//             background-color: pink;
-//             align-items: center;
-//             justify-content: space-evenly;
+/*
+        .alvoroca_header{
+            grid-area: header;
+            display: flex;            
+            background-color: pink;
+            align-items: center;
+            justify-content: space-evenly;
     
     
-//             .alvo_logo {
-//                 width: 50px;
-//                 height: 50px;
-//                 margin-top: 15px;
-//                 margin-left: 5px;
-//             }
+            .alvo_logo {
+                width: 50px;
+                height: 50px;
+                margin-top: 15px;
+                margin-left: 5px;
+            }
     
-//             .alvoroca_navbar {                
-//                 width: 60%;
-//                 border: solid 1px;
+            .alvoroca_navbar {                
+                width: 60%;
+                border: solid 1px;
     
-//                     .alvoroca_nav_list {
-//                         display: flex;
-//                         flex-wrap: wrap;
-//                         justify-content: space-between;
-//                     }
-//             }
-//         }
+                    .alvoroca_nav_list {
+                        display: flex;
+                        flex-wrap: wrap;
+                        justify-content: space-between;
+                    }
+            }
+        }
     
     
-//         .alvoroca_article{
-//             grid-area: article;
-//             background-color: lightblue;
-//             padding-top: 50px;
-//             padding-bottom: 80px;
-//             display: grid;
-//             grid-template-columns: 1fr 1fr;
+        .alvoroca_article{
+            grid-area: article;
+            background-color: lightblue;
+            padding-top: 50px;
+            padding-bottom: 80px;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
 
-//             .card_image{           
-//                 .card_images{
-//                     width: 400px;
-//                     height: 500px;
-//                 }                                                                                                          
-//             }
+            .card_image{           
+                .card_images{
+                    width: 400px;
+                    height: 500px;
+                }                                                                                                          
+            }
 
-//             .card_text{
-//                 padding-top: 300px;
-//                 padding-right: 300px;
-//                 .card_title{
-//                     padding-bottom: 80px;
-//                     font-size: 2em;
-//                 }
-//                 .addlink{
-//                     font-size: 1.4em;
-//                     text-decoration: none;
-//                     color: black;
-//                 }
-//                 }
+            .card_text{
+                padding-top: 300px;
+                padding-right: 300px;
+                .card_title{
+                    padding-bottom: 80px;
+                    font-size: 2em;
+                }
+                .addlink{
+                    font-size: 1.4em;
+                    text-decoration: none;
+                    color: black;
+                }
+                }
 
-//         }  
+        }  
 
-//         .alvoroca_main{
-//             grid-area: main;
-//             background-color: pink;            
-//             width: 100%;
-//             height: auto;
+        .alvoroca_main{
+            grid-area: main;
+            background-color: pink;            
+            width: 100%;
+            height: auto;
             
 
-//             .cards{
-//                 display: flex;
-//                 justify-content: space-evenly;
-//                 align-items: center;
-//                 width: 100%;
-//                 height: auto;
-//                 padding-bottom: 30px;
+            .cards{
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                width: 100%;
+                height: auto;
+                padding-bottom: 30px;
 
                 
-//                 .card{
-//                     margin-right: 40px;
-//                     margin-left: 40px;
-//                     margin-bottom: 70px;
-//                     width: 220px;
-//                     height: auto;
+                .card{
+                    margin-right: 40px;
+                    margin-left: 40px;
+                    margin-bottom: 70px;
+                    width: 220px;
+                    height: auto;
 
-//                     .card_container{
-//                         .card_images{
-//                             width: 220px;
-//                             height: 250px;
-//                         }
-//                     }
-//                     .card_description{
-//                         margin-top: 15px;
+                    .card_container{
+                        .card_images{
+                            width: 220px;
+                            height: 250px;
+                        }
+                    }
+                    .card_description{
+                        margin-top: 15px;
                         
-//                         .card_title{
-//                             font-size: 1.7em;
-//                         }
-//                         .card_details{
-//                             font-size: 1.7em;
-//                         }
+                        .card_title{
+                            font-size: 1.7em;
+                        }
+                        .card_details{
+                            font-size: 1.7em;
+                        }
 
-//                         a{
-//                             margin-left: 60%;
-//                             text-decoration: none;
-//                             font-size: 1.4em;
-//                             color: blueviolet;
-//                             justify-content: right;
-//                         }
-//                     }
-//                 }
+                        a{
+                            margin-left: 60%;
+                            text-decoration: none;
+                            font-size: 1.4em;
+                            color: blueviolet;
+                            justify-content: right;
+                        }
+                    }
+                }
 
-//             }
-//         }
-//      }
-// } 
+            }
+        }
+    }
+} 
 */
