--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,686 +1,115 @@
-@import url("https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap");
-.header {
-  display: flex;
-  grid-area: header;
-  background-color: red;
-  justify-content: space-evenly;
-  justify-items: center;
-  align-items: center;
-  height: 140px;
-}
-.header .navbar ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-.header .navbar ul li {
-  padding: 20px;
-}
-.header .navbar ul li:hover {
-  color: black;
-}
-.header .navbar ul li a {
-  color: greenyellow;
-  font-size: 1.2rem;
-}
-
-@media screen and (min-width: 1220px) {
-  .header {
-    display: flex;
-    grid-area: header;
-    background-color: pink;
-    justify-content: flex-end;
-    justify-items: center;
-    align-items: center;
-    height: 140px;
-  }
-  .header .navbar ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  .header .navbar ul li {
-    padding: 20px;
-  }
-  .header .navbar ul li:hover {
-    color: black;
-  }
-  .header .navbar ul li a {
-    color: blue;
-    font-size: 1.6rem;
-  }
-}
-.footer {
-  grid-area: footer;
-  height: 130px;
-  background-color: red;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-.footer .footer_text {
-  font-size: 0.8rem;
-  margin-left: 5px;
-  margin-top: 80px;
-  color: rgb(234, 170, 0);
-  display: flex;
-  align-items: center;
-}
-.footer .footer_logos {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: right;
-  margin-right: 30px;
-}
-.footer .footer_logos .footer_logos_img {
-  height: 30px;
-  width: 30px;
-  margin-left: 12px;
-}
-
-@media screen and (min-width: 1200px) {
-  .footer {
-    grid-area: footer;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    background-color: yellowgreen;
-    height: 160px;
-  }
-  .footer .footer_text {
-    width: 100%;
-    font-size: 1.3rem;
-    padding-left: 8px;
-    color: rgb(234, 170, 0);
-  }
-  .footer .footer_logos {
-    width: 100%;
-    padding-right: 60px;
-    gap: 20px;
-  }
-  .footer .footer_logos .footer_logos_img {
-    height: 30px;
-    width: 30px;
-  }
-}
-.index_container {
-  font-weight: 100;
-  display: grid;
-  grid-template-areas: "header" "article" "footer";
-  grid-template-rows: 140px 450px 140px;
-  align-items: center;
-  text-align: center;
-  min-width: 100%;
-  background-color: grey;
-}
-.index_container .index_article {
-  grid-area: article;
-  display: flex;
-  justify-content: left;
-  height: 400px;
-}
-.index_container .index_article .index_texto {
-  font-size: 1.1rem;
-  color: white;
-  text-align: left;
-  margin: 40px 20px 0px 10px;
-}
-
-/*     DISPLAY   TABLET     */
-/* @media (min-width: 768px) { */
-@media screen and (min-width: 768px) and (orientation: portrait) {
-  .index_container {
-    font-family: "Nanum Brush Script", cursive;
-    font-weight: 100;
-    display: grid;
-    grid-template-areas: "header header" "article article" "footer footer";
-    grid-template-rows: 200px 500px 170px;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    text-align: center;
-  }
-  .index_container .header {
-    background-color: lavender;
-    display: flex;
-    justify-content: end;
-    border: 3px solid;
-    height: 120px;
-  }
-}
-/* @media screen and (min-width: 768px) and (orientation: landscape){
-
-} */
-/*     DISPLAY   DESKTOP     */
-@media screen and (min-width: 1200px) {
-  .index_container {
-    font-family: "Nanum Brush Script", cursive;
-    font-weight: 100;
-    display: grid;
-    grid-template-areas: "header header" "article article" "footer footer";
-    grid-template-rows: 200px 500px 150px;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    text-align: center;
-  }
-  .index_container .index_article {
-    grid-area: article;
-    height: 500px;
-  }
-  .index_container .index_article .index_texto {
-    max-width: 70%;
-    font-size: 1.7rem;
-    margin-top: 50px;
-    color: yellow;
-    margin-left: 40px;
-    margin-right: 20px;
-  }
-}
-.aboutme_container {
-  font-weight: 100;
-  display: grid;
-  grid-template-areas: "header" "article" "footer";
-  grid-template-rows: 140px 450px 140px;
-  grid-template-columns: 1fr;
-  align-items: center;
-  text-align: center;
-  min-width: 100%;
-  background-color: yellowgreen;
-  line-height: 1.4em;
-}
-.aboutme_container .aboutme_article {
-  grid-area: article;
-  display: flex;
-  justify-content: center;
-  font-size: 1.1rem;
-  color: red;
-  height: 440px;
-  margin: 60px 5px 0px 15px;
-}
-.aboutme_container .aboutme_article .aboutme_framepic .aboutme_pic {
-  height: 90px;
-  width: 90px;
-}
-
-/* @media (min-width: 768px) { */
-@media screen and (min-width: 768px) {
-  .aboutme_container {
-    font-family: "Nanum Brush Script", cursive;
-    font-weight: 100;
-    display: grid;
-    grid-template-areas: "header header" "article article" "footer footer";
-    grid-template-rows: 1fr auto 1fr;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-  }
-  /* .header{
-      background-color: lavender;
-      display: flex;
-      justify-content: end;
-      border: 3px solid;
-      height: 120px
-  } */
-}
-/*     DISPLAY   DESKTOP     */
-@media screen and (min-width: 1200px) {
-  .aboutme_container {
-    font-family: "Nanum Brush Script", cursive;
-    font-weight: 100;
-    display: grid;
-    grid-template-areas: "header header" "article article" "footer footer";
-    grid-template-rows: 1fr auto 1fr;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    /* text-align: center; */
-  }
-  .aboutme_container .aboutme_article .aboutme_texto {
-    width: 90%;
-    font-size: 1.5rem;
-    margin-top: 40px;
-    color: yellow;
-    margin-left: 20px;
-  }
-  .aboutme_container .aboutme_article h2 {
-    display: flex;
-    justify-content: left;
-  }
-  .aboutme_container .aboutme_article .aboutme_framepic .aboutme_pic {
-    margin-bottom: 50px;
-    width: 160px;
-    height: 150px;
-    margin-left: 40px;
-  }
-}
-/* MOBILE FIRST  */
-.publications_container {
-  display: grid;
-  grid-template-areas: "header" "article" "section" "footer";
-  grid-template-rows: 140px 300px 300px 140px;
-  grid-template-columns: 1fr;
-}
-
-.publications_article {
-  grid-area: article;
-  background: brown;
-}
-
-.publications_section {
-  grid-area: section;
-  background: blueviolet;
-}
-
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  height: 100%;
-}
-
-.alvoroca_container {
-  display: grid;
-  grid-template-areas: "header" "banner" "article" "main" "footer";
-  grid-template-rows: auto auto auto auto 80px;
-  grid-template-columns: 1fr;
-  gap: 30px;
-  min-width: 100%;
-  background-color: rgb(116, 47, 55);
-}
-.alvoroca_container .alvoroca_header {
-  padding-top: 20px;
-  grid-area: header;
-  display: grid;
-  grid-template-columns: 20% auto;
-}
-.alvoroca_container .alvoroca_header .alvoroca_logo {
-  margin-left: 5px;
-}
-.alvoroca_container .alvoroca_header .alvoroca_logo .alvo_logo {
-  width: 95px;
-  height: 90px;
-}
-.alvoroca_container .alvoroca_header .alvoroca_navbar {
-  margin-left: 16px;
-}
-.alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-.alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list li {
-  margin-right: 8px;
-  margin-top: 8px;
-  text-decoration: none;
-}
-.alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list li a {
-  text-decoration: none;
-  color: rgb(227, 218, 201);
-  font-size: 1.3rem;
-}
-.alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list li .alvoroca_link {
-  font-size: 1.6rem;
-  color: rgb(227, 218, 201);
-}
-.alvoroca_container .alvoroca_banner {
-  grid-area: banner;
-  height: -moz-fit-content;
-  height: fit-content;
-  padding-top: 50px;
-}
-.alvoroca_container .alvoroca_banner .banner_img {
-  width: 100%;
-  height: 120%;
-}
-.alvoroca_container .alvoroca_article {
-  grid-area: article;
-  display: grid;
-  grid-template-columns: 70% auto;
-  align-content: center;
-  padding: 100px 10px 100px 10px;
-}
-.alvoroca_container .alvoroca_article .card_image .card_images {
-  width: 230px;
-  height: 260px;
-  border: solid 1px;
-}
-.alvoroca_container .alvoroca_article .card_text {
-  padding-top: 60px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: flex-start;
-  color: white;
-}
-.alvoroca_container .alvoroca_article .card_text .card_title {
-  font-size: 1.7em;
-  text-shadow: 0.3px 0.5px;
-}
-.alvoroca_container .alvoroca_article .card_text a {
-  text-decoration: none;
-  color: white;
-}
-.alvoroca_container .alvoroca_article .card_text .addlink {
-  font-size: 1.4rem;
-}
-.alvoroca_container .alvoroca_main {
-  grid-area: main;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  height: auto;
-  width: 100%;
-  align-items: center;
-  gap: 25px;
-  padding-left: 10px;
-}
-.alvoroca_container .alvoroca_main .card {
-  width: 90%;
-  height: auto;
-  border: solid 1px;
-  border-radius: 5px 5px 5px 5px;
-  margin-bottom: 5px;
-}
-.alvoroca_container .alvoroca_main .card .card_images {
-  height: 180px;
-  width: 100%;
-}
-.alvoroca_container .alvoroca_main .card .card_description {
-  margin-top: 8px;
-  margin-left: 6px;
-  color: white;
-}
-.alvoroca_container .alvoroca_main .card .card_description .card_title {
-  text-align: center;
-  margin-bottom: 10px;
-  color: white;
-}
-.alvoroca_container .alvoroca_main .card .card_description a {
-  margin-top: 20px;
-  text-decoration: none;
-  color: rgb(155, 155, 218);
-  display: flex;
-  justify-content: flex-end;
-  margin-right: 14px;
-}
-.alvoroca_container .alvoroca_main .card8 {
-  background-color: blue;
-}
-.alvoroca_container .alvoroca_main .card8:hover {
-  background-color: yellow;
-}
-.alvoroca_container .footer, .alvoroca_container .footer_alvo {
-  background-color: rgb(116, 47, 55);
-}
-.alvoroca_container .footer .footer_text a, .alvoroca_container .footer_alvo .footer_text a {
-  color: rgb(234, 170, 0);
-}
-
-@media screen and (min-width: 1200px) {
-  .alvoroca_container {
-    display: grid;
-    grid-template-areas: "header  header   header" "banner  banner   banner" "article article article" "main    main    main" "footer footer footer";
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 240px auto auto auto 100px;
-  }
-  .alvoroca_container .alvoroca_header {
-    grid-area: header;
-    display: grid;
-    grid-template-columns: 40% 60%;
-    grid-template-rows: auto;
-  }
-  .alvoroca_container .alvoroca_header .alvoroca_logo {
-    display: flex;
-    align-items: center;
-    padding-left: 40px;
-    padding-top: 15px;
-  }
-  .alvoroca_container .alvoroca_header .alvoroca_logo .alvo_logo {
-    width: 230px;
-    height: 210px;
-  }
-  .alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    padding-top: 70px;
-  }
-  .alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list li {
-    margin-right: 48px;
-    margin-top: 8px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
     text-decoration: none;
-  }
-  .alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list li a {
-    font-size: 1.7rem;
-  }
-  .alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list #alvoroca_link {
-    color: rgb(155, 155, 218);
-    font-size: 2rem;
-  }
-  .alvoroca_container .alvoroca_banner {
-    grid-area: banner;
-    padding-bottom: 300px;
-  }
-  .alvoroca_container .alvoroca_banner .banner_img {
+}
+
+html {    
+    height: 100%;
+}
+
+body {    
+    min-height: 100%;
+    background-color: black;
+}
+
+.container {    
+    display: grid;
+    grid-template-areas:
+    "header header header"
+    "aside  aside  aside"
+    "main    main  main"
+    "footer footer footer";    
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 30px;
     min-width: 100%;
-  }
-  .alvoroca_container .alvoroca_article {
-    padding-bottom: 150px;
-    grid-area: article;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 170px;
-  }
-  .alvoroca_container .alvoroca_article .card_image {
-    place-self: center;
-  }
-  .alvoroca_container .alvoroca_article .card_image .card_images {
-    width: 430px;
-    height: 460px;
-    border: solid 1px;
-  }
-  .alvoroca_container .alvoroca_article .card_text {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  .alvoroca_container .alvoroca_article .card_text .card_title {
-    font-size: 2.7em;
-    text-shadow: 0.3px 0.4px;
-    letter-spacing: 5px;
-  }
-  .alvoroca_container .alvoroca_article .card_text .addlink {
-    font-size: 2.2rem;
-    color: rgb(155, 155, 218);
-  }
-  .alvoroca_container .alvoroca_main {
+    
+}
+
+.header{
+    grid-area: header;    
+    font-size: 2rem;
+    color: aliceblue;    
+    height: 80px;    
+}
+
+.aside{
+    grid-area: aside;
+    display: flex; 
+    justify-content: center;
+    height: 100px;
+}
+.aside p{    
+    display: flex; 
+    align-items: center;
+    color: yellowgreen;
+}
+
+
+.main{
     grid-area: main;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
+    justify-content: center;    
+    grid-template-columns: repeat(4, 1fr);
     padding-top: 100px;
-    padding-bottom: 90px;
-    justify-items: center;
-  }
-  .alvoroca_container .alvoroca_main .card {
-    width: 60%;
-    height: auto;
-    border: solid 1px;
+    padding-bottom: 90px;                
+    flex-wrap: wrap;    
+    gap: 80px;
+}
+
+.card {   
+    width: 230px;
+    height: 310px;
+    border: solid 1px;                
     margin-bottom: 25px;
     border-radius: 7px 7px 7px 7px;
-  }
-  .alvoroca_container .alvoroca_main .card .card_images {
+}
+.card_img_container {
     border-radius: 7px 7px 0px 0px;
-    height: 280px;
+} 
+.card_images{
+    height: 210px;
     width: 100%;
-  }
-  .alvoroca_container .alvoroca_main .card .card_description {
-    margin-top: 18px;
-    margin-left: 6px;
-    color: white;
-  }
-  .alvoroca_container .alvoroca_main .card .card_description .card_title {
+    border-radius: 7px 7px 0px 0px;
+}
+.card_description {
+    margin-left: 6px;                
+    color: red;
+    width: 100%;
+}
+
+.card_title {
     text-align: center;
     margin-bottom: 10px;
-    color: white;
-    font-size: 1.6rem;
-  }
-  .alvoroca_container .alvoroca_main .card .card_description a {
-    margin-top: 10px;
+    font-size: 1.3rem;                        
+}
+
+a{
+    margin-top: 10px    ;
     text-decoration: none;
-    color: rgb(155, 155, 218);
     display: flex;
     justify-content: flex-end;
-    margin-right: 14px;
-  }
-  .alvoroca_container .alvoroca_main .card .card_description #addlink, .alvoroca_container .alvoroca_main .card .card_description p {
-    font-size: 1.3rem;
-  }
-  .alvoroca_container .alvoroca_main .card .card_description #addlink {
-    color: rgb(227, 132, 37);
-    margin-top: 16px;
-  }
-  .alvoroca_container .footer, .alvoroca_container .footer_alvo {
-    grid-area: footer;
-  }
-}
-/*
-        .alvoroca_header{
-            grid-area: header;
-            display: flex;            
-            background-color: pink;
-            align-items: center;
-            justify-content: space-evenly;
-
-
-            .alvo_logo {
-                width: 50px;
-                height: 50px;
-                margin-top: 15px;
-                margin-left: 5px;
-            }
-
-            .alvoroca_navbar {                
-                width: 60%;
-                border: solid 1px;
-
-                    .alvoroca_nav_list {
-                        display: flex;
-                        flex-wrap: wrap;
-                        justify-content: space-between;
-                    }
-            }
-        }
-
-
-        .alvoroca_article{
-            grid-area: article;
-            background-color: lightblue;
-            padding-top: 50px;
-            padding-bottom: 80px;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-
-            .card_image{           
-                .card_images{
-                    width: 400px;
-                    height: 500px;
-                }                                                                                                          
-            }
-
-            .card_text{
-                padding-top: 300px;
-                padding-right: 300px;
-                .card_title{
-                    padding-bottom: 80px;
-                    font-size: 2em;
-                }
-                .addlink{
-                    font-size: 1.4em;
-                    text-decoration: none;
-                    color: black;
-                }
-                }
-
-        }  
-
-        .alvoroca_main{
-            grid-area: main;
-            background-color: pink;            
-            width: 100%;
-            height: auto;
-
-
-            .cards{
-                display: flex;
-                justify-content: space-evenly;
-                align-items: center;
-                width: 100%;
-                height: auto;
-                padding-bottom: 30px;
-
-
-                .card{
-                    margin-right: 40px;
-                    margin-left: 40px;
-                    margin-bottom: 70px;
-                    width: 220px;
-                    height: auto;
-
-                    .card_container{
-                        .card_images{
-                            width: 220px;
-                            height: 250px;
-                        }
-                    }
-                    .card_description{
-                        margin-top: 15px;
-
-                        .card_title{
-                            font-size: 1.7em;
-                        }
-                        .card_details{
-                            font-size: 1.7em;
-                        }
-
-                        a{
-                            margin-left: 60%;
-                            text-decoration: none;
-                            font-size: 1.4em;
-                            color: blueviolet;
-                            justify-content: right;
-                        }
-                    }
-                }
-
-            }
-        }
-    }
-} 
-*/
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
+    margin-right: 14px;                
 }
 
-html {
-  height: 100%;
+#addlink, p{
+    font-size: 1.1rem;
 }
 
-body {
-  font-family: "Nanum Brush Script", cursive;
-  min-height: 100%;
+a{
+    color: olive;
 }
 
-@media print {
-  .index_container {
-    font-family: "Nanum Brush Script", cursive;
-    font-weight: 100;
-    display: grid;
-    grid-template-areas: "header header" "article article" "footer footer";
-    grid-template-rows: 1fr auto 1fr;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    /* text-align: center; */
-  }
-}/*# sourceMappingURL=styles.css.map */
+
+.footer{
+    grid-area: footer;    
+    display: flex;
+    justify-content: right;
+    color: yellowgreen;
+    height: 30px;
+    margin-right: 43px;
+    margin-bottom: 6px;
+
+}
